[package]
name = "latest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
home = "0.5.9"
indicatif = "0.17.8"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xcfg-derive = "0.1.0"
xcfg-rs = { version = "0.3.0", features = ["full"] }

[dev-dependencies]
scopeguard = "1.2.0"
